# XScraper

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml  release.yml
benches/: parser_bench.rs
config/: xscraper.example.json
docs/: production-hardening.md
docs/performance/: README.md
scripts/: live_acceptance.py  release_gate.py  security_check.py  xclid_drift_check.py
src/: account.rs  analysis.rs  api.rs  browser_probe.rs  cli.rs  config.rs  diagnostics.rs  drift.rs  error.rs  evidence.rs  fetch_profile.rs  gql.rs  imap.rs  jobs.rs  lib.rs  lists.rs  login.rs  main.rs  models.rs  operations.rs  parser.rs  pool.rs  queue_client.rs  storage.rs  utils.rs  xclid.rs
tests/: analysis_contract.rs  api_contract.rs  browser_probe_contract.rs  diagnostics_cli_contract.rs  doctor_cli.rs  drift_contract.rs  evidence_contract.rs  fetch_profile_contract.rs  health_contract.rs  imap_contract.rs  jobs_contract.rs  list_cli.rs  parser_contract.rs  pool_cli.rs  pool_contract.rs  queue_client_contract.rs  sqlite_concurrency.rs  xclid_diagnostics_contract.rs
tests/support/: sample_payloads.rs
